k8s/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-es-http-plain
  namespace: elastic-system
  annotations:
    service.cilium.io/backend-protocol: "http"
spec:
  selector:
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
    common.k8s.elastic.co/type: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
