k8s/elasticsearch/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elasticsearch-route
  namespace: elastic-system
spec:
  parentRefs:
    - name: internal-gw
      namespace: gateway-internal
      sectionName: es-https-apex
  hostnames:
    - es.home.arpa
  rules:
    - backendRefs:
      - name: elasticsearch-es-http
        port: 9200
