k8s/elasticsearch/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elasticsearch-route
  namespace: elastic-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gw
      namespace: gateway-internal
      sectionName: es-https-apex
  hostnames:
    - es.home.arpa
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: elasticsearch-es-http
        port: 9200
        weight: 1
